# choco

./: CMakeLists.txt  README.md
include/choco/foundation/: file.h  io.h  macros.h  memory.h
include/choco/graphics/: canvas.h  color.h  common.h  context.h  driver.h  event.h  graphics.h  renderer.h  state.h  surface.h  texture.h  window.h
include/glad/: gladfuncs.hpp
src/: CMakeLists.txt  glad.cpp  main.cpp  test_gl.cpp  test_hidden.h  test_hidden_parent.h
src/foundation/: CMakeLists.txt  dump_win32.cpp  file.cpp  memory.cpp
src/graphics/: CMakeLists.txt  canvas.cpp  context.cpp  event.cpp  graphics.cpp  handle.h  renderer.cpp  surface.cpp  texture.cpp  window.cpp
